# SRT-Editor

./: CMakeLists.txt  README.md  configure.h.in
inc/: audio.h  main.h  main_window.h  settings.h  settings_window.h  text_to_speech_window.h  translator.h  translator_window.h
src/: audio.cpp  main.cpp  main_window.cpp  settings.cpp  settings_window.cpp  text_to_speech_window.cpp  translator.cpp  translator_window.cpp
ui/: app_qrc.qrc  main_window.ui  settings_window.ui  text_to_speech_window.ui  translator_window.ui
